<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_practiceActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PracticeActivity" />
    <Button
        android:id="@+id/btn_baidu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baidu"/>
    <Button
        android:id="@+id/btn_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
    <Button
        android:id="@+id/btn_to_simplepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_simplepage" />
    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycle_view_text" />

</LinearLayout>