<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleActivity">

    <ImageView
        android:id="@+id/first_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/avatar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/obtin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/obtain_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        tools:layout_editor_absoluteY="322dp">

        <TextView
            android:id="@+id/onwer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/owner"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/radio"
            android:text="Button"
            app:layout_constraintStart_toEndOf="@+id/onwer"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/congratulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:text="@string/congratualtion"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/con_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/con_num"
        android:textSize="20sp" />

    <Button
        android:id="@+id/gotostudy"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:text="@string/gotostudy"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />
</LinearLayout>